# OAnQuan-Game

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: deploy.yml  gh-pages.yml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  utils.js
frontend/src/assets/: style.css
frontend/src/components/: Button.vue  ChallengeButton.vue  ChallengeModal.vue  Citizen.vue  ClassicModal.vue  ComputerCitizen.vue  Counter.vue  Direction.vue  Game.vue  Loading.vue  Medal.vue  Modal.vue  Quan.vue  UserCitizen.vue
frontend/src/router/: index.js
frontend/src/stores/: language.js  servers.js  state.js
frontend/src/supabase/: index.js
frontend/src/views/: BotGameView.vue  CampaignSelectionView.vue  ChallengeGameView.vue  ChallengeSelectionView.vue  ClassicGameView.vue  GameView.vue  LeaderboardView.vue  MenuView.vue  TutorialView.vue
oanquan/: __init__.py  alpha_beta.py  api.py  create_challenges.ipynb  oanquan.py
